<resources>
    <string name="app_name" translatable="false">培课</string>
    <string name="register_err_repassword_is_null">密码不能为空</string>
    <string name="register_err_password_is_not_same">两次输入密码不一致</string>
    <string name="register_err_password_length_is_not_right">密码长度应大于4位</string>
    <string name="register_err_account_1">账号不能为空</string>
    <string name="register_err_account_2">密码应由数字、字母、下划线组成</string>
    <string name="server_err_not_exist">用户不存在</string>
    <string name="server_err_exist">用户已存在</string>
    <string name="server_err_old_wrong">原密码错误</string>

    <string name="s010801_in_head_title">我的</string>
    <string name="s010801_in_head_account">账户名</string>
    <string name="s010801_ed_head_title">个人资料</string>
    <string name="s010801_ed_head_title_back">返回</string>
    <string name="s010801_ed_head_heagimage">头像：</string>
    <string name="s010801_ed_head_changeheadimage">+ 更 换 头 像</string>
    <string name="s010801_ed_head_name">姓名：</string>
    <string name="s010801_ed_head_sex">性别：</string>
    <string name="s010801_ed_head_birthday">出生年月：</string>
    <string name="s010801_ed_head_definite_time">确诊时间：</string>
    <string name="s010801_ed_head_city">所在城市：</string>
    <string name="s010801_ed_head_phone">电话：</string>
    <string name="s010801_ed_head_disease">病症：</string>
    <string name="s010801_ed_head_type">类型：</string>
    <string name="s010801_ed_head_inputname">输入姓名</string>
    <string name="s010801_ed_head_inputphone">输入手机号</string>
    <string name="s010801_ed_head_inputdisease">输入病症</string>
    <string name="s010801_ed_head_inputtype">输入类型</string>
    <string name="s010302_register_err_protocal_is_not_agreed">您还未同意《糖尿病关怀服务协议》</string>
    <string name="s010302_register_err_password_is_not_same">两次输入密码不一致！</string>
    <string name="s010302_register_err_password_is_not_right">密码长度至少为10位</string>
    <string name="s010302_register_err_password_is_null">密码不能为空</string>
    <string name="s010302_register_err_repassword_is_null">请输入确认密码</string>
    <string name="s010302_register_err_repassword_form">密码必须由数字、小写字母、大写字母组合而成</string>
    <string name="s010302_register_err_phone_1">手机号码输入有误！</string>
    <string name="s010302_register_err_phone_2">手机号长度不正确！</string>
    <string name="s010302_register_err_phone_3">手机号不能为空！</string>
    <string name="s010302_register_err_account_1">账号不能为空！</string>
    <string name="s010302_register_err_account_2">账号长度应为1~20位字符！</string>
    <string name="s010302_register_err_account_3">账号应由数字、字母(小写)、下划线组成！</string>
    <string name="s010302_register_err_network">验证失败，请确保联网后重新注册！</string>
    <string name="common_exit_title">您确定退出应用？</string>
    <string name="common_exit_positive">就要退出</string>
    <string name="common_exit_negative">我再看看</string>
    <string name="common_error_noprovince">请先选择省!</string>
    <string name="common_success">操作成功!</string>
    <string name="common_error_no_card">找不到内部存储设备!</string>
    <string name="common_error_no_folder">找不到存储目录!</string>
    <string name="common_error_no_connect">请连接网络后重试!</string>
    <string name="common_loading">请等待...</string>
    <string name="common_error_unstable_net">网络不稳定，请稍后重试!</string>
    <string name="s010401_record_newnote">备注信息</string>
    <string name="s010401_record_newpicture">选择照片</string>
    <string name="s010401_record_newtestime">测量时间:</string>
    <string name="s010401_record_newpicturefromwhere">请选择照片来源:</string>
    <string name="s010401_record_newpicturefromlocal">本地</string>
    <string name="s010401_record_newpicturefromcamera">相机</string>
    <string name="s010401_record_newpicturecancel">取消</string>
    <string name="soft_update_no">无法升级！</string>
    <string name="soft_update_title">现在升级</string>
    <string name="soft_update_info">升级信息</string>
    <string name="soft_update_updatebtn">升级</string>
    <string name="soft_update_later">忽略</string>
    <string name="soft_updating">升级中...</string>
    <string name="soft_update_cancel">取消</string>

    <string name="server_err_wrong_password">密码错误</string>
    <string name="server_err_nul">用户名、密码不能为空</string>
    <string name="server_err_insert_failed">注册失败，请稍后再试</string>
    <string name="resetpass_head">修改密码</string>
    <string name="resetpass_bpass">原密码</string>
    <string name="resetpass_npass1">新密码</string>
    <string name="resetpass_npass2">再次输入</string>
    <string name="resetpass_submit">确认注册</string>

    <drawable name="clr_normal">#b18badde</drawable>
    <drawable name="clr_pressed">#bab5b1</drawable>
    <drawable name="rlayout_normal">#ffffff</drawable>
    <drawable name="rlayout_pressd">#66CBFF</drawable>

    <string name="tab_record">记录</string>
    <string name="tab_acta">绑定</string>
    <string name="tab_actb">同步</string>
    <string name="tab_me">我的</string>
</resources>
