<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resetpass_head"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:textColor="#419c19"
                    android:paddingRight="10dp" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/resetpass_bpass"
                    android:gravity="left"
                    android:paddingRight="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_originpass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_weight="3"
                    android:textSize="14sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/resetpass_npass1"
                    android:gravity="left"
                    android:paddingRight="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_pass1"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_weight="3"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/resetpass_npass2"
                    android:gravity="left"
                    android:paddingRight="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_pass2"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_weight="3" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bn_edit_submit"
                    android:text="@string/resetpass_submit"
                    android:layout_weight="3"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>