<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_buttons"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/tab_height"
    android:layout_gravity="bottom"
    android:baselineAligned="false"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FF909090" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_record"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">


            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/ti_home"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:button="@null"
                android:clickable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_recordbuttonstyle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="top"
                android:text="@string/tab_record"
                android:textColor="@color/appYellow"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_acta"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/ib_sort"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:button="@null"
                android:clickable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_actabuttonstyle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="top"
                android:text="@string/tab_acta"
                android:textColor="@color/appYellow"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_actb"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/ib_shopping_cart"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:button="@null"
                android:clickable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_actbbuttonstyle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="top"
                android:text="@string/tab_actb"
                android:textColor="@color/appYellow"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/ib_me"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:button="@null"
                android:clickable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_mebuttonstyle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="top"
                android:text="@string/tab_me"
                android:textColor="@color/appYellow"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
